tests/baselines/reference/parserTypeQuery6.errors.txt
==== tests/cases/compiler/parserTypeQuery6.ts (1 errors) ====
    var v: typeof A.B;
                  ~
!!! parserTypeQuery6.ts(1,15): error TS2095: Cannot find name 'A'.